Kubernetes/Dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demand-planning-web
  namespace: demand-planning
  labels:
    app: demand-planning-web
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "false"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: demand-planning-web
